#summary Changelog for all changes since the fork

= Changes =
== Version 1.1 ==
  * Added display-preference for dark-background and white text
  * Fixed bug: Error in case of disabled-API

== Version 1.09 (2) ==
  * Vibrate when last article is reached, not only when trying to move further
  * Changed buttons and layout for article-browsing
  * Added left-hand-mode for landscape display
  * Fixed Issue #75: ([https://code.google.com/p/ttrss-reader-fork/issues/detail?id=75 Own keystore doesn't work any more])
  * Fixed Bug which prevented articles which had been marked while beeing offline to be synchronized with the server later
  * Removed ArticleCache. Same thing happens automatically when CategoryView is opened.
  * Fixed ImageCache for unreliable connections
  * Starred/Published articles are not purged anymore, article-limit in settings does not apply to these.
  
== Version 1.08 ==
  * Fixed connectivity-problems (no more endless waiting with spinning activity-wheel)
  * Added preference to disable swipe and instead use buttons for browsing articles. Still a bit buggy.

== Version 1.07 (4) ==
  * Improved speed of getCounters-API-call and database-access in method insertArticle()
  * Allow receiving of gzip-compressed data
  * Removed more unnecessary code due to dropped support of servers below 1.5.3
  * Wrote new Connector with new JSON-parser "GSON" from google (included in Android since API-lvl 11)
  * Fixed some problems with the counters for Fresh/Starred/Published articles
  * Faster refresh of the UI when marking anything
  * Fixed small bug which rendered the ImageCache unusable
  * Fixed Labels and two ANR-Situations
  * Fixed "Mark all read" for Labels
  * Fixed "Invert sort" for category-view
  * Bugfixes

== Version 1.06 ==
  * Removed support for server-versions lower then 1.5.3
  * Added progress-information and UI-refresh to ImageCache but only while articles are fetched
  * Added support for Labels

== Version 1.05 ==